syntax = "proto3";
import "google/api/annotations.proto";
package pb;

service Billing {
  rpc GenBill(GenBillRequest) returns (GenBillReply) {
    option (google.api.http) = {
      post: "/billing/gen-bill"
      body: "*"
    };
  };
  rpc GetBillList(GetBillListRequest) returns (GetBillListReply) {
    option (google.api.http) = {
      get: "/billing/get-bill-list"
    };
  };
  rpc GetBill(GetBillRequest) returns (GetBillReply) {
    option (google.api.http) = {
      get: "/billing/get-bill"
    };
  };
  rpc SetPayedAndGetPrice(SetPayedAndGetPriceRequest) returns (SetPayedAndGetPriceReply) {
    option (google.api.http) = {
      post: "/billing/set-payed-and-get-price"
      body: "*"
    };
  }
}

message BillMsg {
  int64 bill_num = 1;
  float price = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  string origin = 5;
  string destination = 6;
  string passenger_name = 7;
  string driver_name = 8;
  bool payed = 9;
  int64 passenger_id = 10;
  int64 driver_id = 11;
}

message GenBillRequest {
  BillMsg bill_msg = 1;
}

message GenBillReply {
  bool status = 1;
  BillMsg bill_msg = 2;
}

message GetBillRequest {
  int64 bill_num = 1;
}

message GetBillReply {
  bool status = 1;
  BillMsg bill_msg = 2;
}

message GetBillListRequest {
  int64 user_id = 1;
}

message GetBillListReply {
  repeated BillMsg bill_list= 1;
}

message SetPayedAndGetPriceRequest {
  int64 bill_num = 1;
}

message SetPayedAndGetPriceReply {
  float price = 2;
}